alert z-index fixes

--- a/app/css/game.css
+++ b/app/css/game.css
@@ -83,7 +83,7 @@ header {
   font-size: 30px;
   color: white;
   position: absolute;
-  z-index: 6;
+  z-index: 10;
   opacity: 0.8;
   transition: 1.2s all linear;
   padding-top: 3px;
@@ -109,7 +109,7 @@ header {
   font-size: 30px;
   color: white;
   position: absolute;
-  z-index: 1;
+  z-index: 10;
   opacity: 0.8;
   padding-top: 3px;
 }
@@ -192,8 +192,8 @@ img {
   height: 40px;
   width: 40px;
   border-style: dotted;
-  border-color: #6210E6;
-  border-width: 1px;
+  border-color: #6200FF;
+  border-width: 2px;
   background-color: #33CCFF;
 }
 
